--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "target": "es6",
     "moduleResolution": "node",
     "jsx": "react",
-    "allowJs": true
+    "allowJs": true,
+    "typeRoots": ["./node_modules/@types/", "./src/@types"]
   },
   "include": [ "./src/**/*.ts" ],
 }
